--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -12,7 +12,6 @@ body
     float: right;
     margin-bottom: 15px;
 }
-
 .media-object
 {
     width:40px;
@@ -24,7 +23,10 @@ body
     font-weight: normal;
     color: #999;
 }
-
 .profile .section{
     margin-top: 15px;
+}
+.community-menu{
+    color: #999;
+    font-size: 13px;
 }
