--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -17,6 +17,9 @@ body
     width:40px;
     height:40px;
 }
+.media-body{
+    padding-top: 10px;
+}
 .text-desc
 {
     font-size: 12px;
@@ -32,4 +35,11 @@ body
 }
 .jumbotron{
     margin: 50px;
+}
+.comment{
+    margin:10px 0;
+}
+.btn-comment{
+    float: right;
+    margin-bottom: 15px;
 }
