--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,8 +8,16 @@
     <link rel="stylesheet" href="css/community.css"/>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-
 </head>
+<script type="application/javascript">
+    window.onload = function () {
+        var closable = window.localStorage.getItem("closable");
+        if(closable == "true"){
+            window.close();
+            window.localStorage.removeItem("closable");
+        }
+    }
+</script>
 <body>
 <div th:insert="~{head :: head}"></div>
 
