--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -16,7 +16,10 @@
 
 <div class="container-fluid main profile">
     <div class="row">
+
+        <!--左边-->
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+            <!--问题-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4><span th:text="${question.title}"></span></h4>
                 作者：<span th:text="${question.user.name}">znn</span> |
@@ -31,9 +34,38 @@
                     编辑
                 </a>
             </div>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 sp-comment">
+            <h4>
+                <span th:text="${question.commentCount}"> </span>个回复
+            </h4>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 sp-comment">
+            <!--回复-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-area" th:each="comment:${commentList}">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object img-rounded"
+                                 th:src="${comment.user.avatarUrl}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <!--信息区-->
+                        <h4 class="media-heading">
+                            <span th:text="${comment.user.name}"></span>
+                        </h4>
+                        <div th:text="${comment.content}"></div>
+                        <!--功能区-->
+                        <div class="comment-func">
+                            <span class="glyphicon glyphicon-thumbs-up icon"></span>
+                            <span class="glyphicon glyphicon-comment icon"></span>
+                            <span class="pull-right" th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd')}"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
+            <!--回复框-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
                 <div class="media">
                     <div class="media-left">
@@ -48,12 +80,15 @@
                         </h4>
                     </div>
                 </div>
+                <!--回复-->
                 <input type="hidden" id="question_id" th:value="${question.id}">
                 <textarea class="form-control comment" rows="6" id="comment_content"></textarea>
                 <!-- Indicates a successful or positive action -->
                 <button type="button" class="btn btn-success btn-comment" onclick="post()">回复</button>
             </div>
         </div>
+
+        <!--右边-->
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>发起人</h4>
