--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -16,15 +16,15 @@
 
 <div class="container-fluid main profile">
     <div class="row">
-
         <!--左边-->
-        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 question-area">
             <!--问题-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4><span th:text="${question.title}"></span></h4>
-                作者：<span th:text="${question.user.name}">znn</span> |
+                <span class="text-desc">
+                作者：<span th:text="${question.user.name}"></span> |
                 发布时间：<span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}">13 May 2011</span> |
-                阅读数 ：<span class="text-desc"><span th:text="${question.viewCount}"></span></span>·
+                阅读数 ：<span th:text="${question.viewCount}"></span></span>·
                 <hr>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -35,56 +35,65 @@
                 </a>
             </div>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 sp-comment">
-            <h4>
-                <span th:text="${question.commentCount}"> </span>个回复
-            </h4>
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 sp-comment">
-            <!--回复-->
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-area" th:each="comment:${commentList}">
-                <div class="media">
-                    <div class="media-left">
-                        <a href="#">
-                            <img class="media-object img-rounded"
-                                 th:src="${comment.user.avatarUrl}">
-                        </a>
-                    </div>
-                    <div class="media-body">
-                        <!--信息区-->
-                        <h4 class="media-heading">
-                            <span th:text="${comment.user.name}"></span>
-                        </h4>
-                        <div th:text="${comment.content}"></div>
-                        <!--功能区-->
-                        <div class="comment-func">
-                            <span class="glyphicon glyphicon-thumbs-up icon"></span>
-                            <span class="glyphicon glyphicon-comment icon"></span>
-                            <span class="pull-right" th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd')}"></span>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>
+                    <span th:text="${question.commentCount}"> </span>个回复
+                </h4>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 sp-comment">
+                <!--回复-->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-area" th:each="comment:${commentList}">
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object img-rounded"
+                                     th:src="${comment.user.avatarUrl}">
+                            </a>
+                        </div>
+                        <div class="media-body comment-body">
+                            <!--信息区-->
+                            <h4 class="media-heading comment-head">
+                                <span th:text="${comment.user.name}"></span>
+                            </h4>
+                            <div th:if="${comment.content} == null"> <br></div>
+                            <div th:text="${comment.content}"></div>
+                            <!--功能区-->
+                            <div class="comment-func">
+                                <span class="glyphicon glyphicon-thumbs-up icon"></span>
+                                <span class="glyphicon glyphicon-comment icon"></span>
+                                <span class="pull-right"
+                                      th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd')}"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <!--回复框-->
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
-                <div class="media">
-                    <div class="media-left">
-                        <a href="#">
-                            <img class="media-object img-rounded"
-                                 th:src="${question.user.avatarUrl}">
-                        </a>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>
+                    有话要说
+                </h4>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <!--回复框-->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object img-rounded"
+                                     th:src="${question.user.avatarUrl}">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">
+                                <span th:text="${question.user.name}"></span>
+                            </h4>
+                        </div>
                     </div>
-                    <div class="media-body">
-                        <h4 class="media-heading">
-                            <span th:text="${question.user.name}"></span>
-                        </h4>
-                    </div>
+                    <!--回复-->
+                    <input type="hidden" id="question_id" th:value="${question.id}">
+                    <textarea class="form-control comment" rows="6" id="comment_content"></textarea>
+                    <!-- Indicates a successful or positive action -->
+                    <button type="button" class="btn btn-success btn-comment" onclick="post()">回复</button>
                 </div>
-                <!--回复-->
-                <input type="hidden" id="question_id" th:value="${question.id}">
-                <textarea class="form-control comment" rows="6" id="comment_content"></textarea>
-                <!-- Indicates a successful or positive action -->
-                <button type="button" class="btn btn-success btn-comment" onclick="post()">回复</button>
             </div>
         </div>
 
