--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/community.css"/>
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/moment.js"></script>
     <script src="/js/community.js"></script>
 
 </head>
@@ -28,10 +29,17 @@
                 <hr>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" >
+                    <!--标签-->
+                    <span class="label label-info question-tag" th:each="tag : ${question.tag.split(',')}">
+                        <span class="glyphicon glyphicon-tags"></span>
+                        <span class="label label-info" th:text="${tag}">Info</span>
+                    </span>
+                </div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
                    th:if="${session.user != null && session.user.id == question.creator}">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    编辑
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
                 </a>
             </div>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 sp-comment">
@@ -49,31 +57,58 @@
                                      th:src="${comment.user.avatarUrl}">
                             </a>
                         </div>
-                        <div class="media-body comment-body">
+                        <div class="media-body comment-body" th:id="${'comment-body-'+comment.id}">
                             <!--信息区-->
                             <h4 class="media-heading comment-head">
                                 <span th:text="${comment.user.name}"></span>
                             </h4>
-                            <div th:if="${comment.content} == null"> <br></div>
+                            <div th:if="${comment.content} == null"><br></div>
                             <div th:text="${comment.content}"></div>
                             <!--功能区-->
                             <div class="comment-func">
                                 <span class="glyphicon glyphicon-thumbs-up icon"></span>
-                                <span class="glyphicon glyphicon-comment icon"></span>
+                                <span class="comment-func-second" th:data-id="${comment.id}" onclick="secondComment(this)">
+                                    <span class="glyphicon glyphicon-comment" ></span>
+                                    <span class="comment-number" th:text="${comment.commentCount}"></span>
+                                </span>
                                 <span class="pull-right"
                                       th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd')}"></span>
+                            </div>
+                            <!--展示二级评论区-->
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 collapse comment-second"
+                                 th:id="${'comment-'+comment.id}">
+                               <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-area" th:each="comment:${commentList}">
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <img class="media-object img-rounded"
+                                                 th:src="${comment.user.avatarUrl}">
+                                        </div>
+                                        <div class="media-body comment-body">
+                                            &lt;!&ndash;信息区&ndash;&gt;
+                                            <h4 class="media-heading comment-head">
+                                                <span th:text="${comment.user.name}"></span> <span th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd')}"></span>
+                                            </h4>
+                                            <div th:if="${comment.content} == null"><br></div>
+                                            <div th:text="${comment.content}"></div>
+                                        </div>
+                                    </div>
+                                 </div>-->
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                                    <input type="text" class="form-control" placeholder="评论一下....." th:id="${'comment-second-'+comment.id}">
+                                    <button type="button" class="btn btn-success pull-right btn-seccond" th:data-id="${comment.id}" onclick="postsecond(this)">提交</button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
+            <!--回复框-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>
                     有话要说
                 </h4>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <!--回复框-->
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
                     <div class="media">
                         <div class="media-left">
