--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
                         <a th:href="@{'/question/'+${question.id}}" th:text="${question.title}" ></a>
                     </h4>
                     <span th:text="${question.description}"></span><br>
-                    <span class="text-desc"><span th:text="${question.commentCount}"></span> 个回复 · <span th:text="${question.viewCount}"></span> 次浏览 ·  <span th:text="${#dates.format(question.gmtCreate,'dd MMMM yyyy')}">13 May 2011</span></span>
+                    <span class="text-desc"><span th:text="${question.commentCount}"></span> 个回复 · <span th:text="${question.viewCount}"></span> 次浏览 ·  <span th:text="${#dates.format(question.gmtCreate,'yyyy MMMM dd')}">13 May 2011</span></span>
                 </div>
             </div>
 
