--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="/css/community.css" />
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/community.js"></script>
 
 </head>
 <body>
 <div th:insert="~{head :: head}"></div>
-
+<!--发布问题-->
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12" >
@@ -23,15 +24,35 @@
                 <input class="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">问题标题 {简单扼要}</label>
-                    <input type="text" class="form-control" id="title" th:value="${title}" name="title" placeholder="问题标题.....">
+                    <input type="text" class="form-control" id="title" th:value="${title}" name="title" placeholder="问题标题....." autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="description">问题补充 { 按照右侧提示}：</label>
                     <textarea name="description" id="description" th:text="${description}" class="form-control" cols="30" rows="10"></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="tag">添加标签：</label>
-                    <input type="text" class="form-control" id="tag" th:value="${tag}" name="tag" placeholder="输入标签  以，隔开">
+                    <label for="tag" >添加标签：</label>
+                    <input type="text" class="form-control" id="tag" th:value="${tag}" name="tag" placeholder="输入标签  以，隔开" autocomplete="off" onclick="showSelectTag()">
+
+                    <!--tttag选择框-->
+                    <div class="label-tag" id="select-tag">
+                        <!-- Nav tabs -->
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li role="presentation" th:each="selectCategory : ${tags}">
+                                <a th:href="${'#'+selectCategory.categoryName}" aria-controls="home" role="tab" data-toggle="tab" th:text="${selectCategory.categoryName}">
+                                </a>
+                            </li>
+                        </ul>
+                        <!-- Tab panes -->
+                        <div class="tab-content">
+                            <div role="tabpanel" class="tab-pane" th:id="${selectCategory.categoryName}" th:each="selectCategory : ${tags}">
+                                <span class="label label-info question-tag" th:each="selectTag : ${selectCategory.tags}">
+                                    <span class="glyphicon glyphicon-tags" onclick="selectTag(this)" th:data-tag="${selectTag}" th:text="${selectTag}"></span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
 
                 <span class="alert alert-danger" th:if="${error !=null}" th:text="${error}"></span>
