添加了通知，通知用户的问题或者评论被别人评论了。加了notification相关的数据库，controller  dto service

--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -93,7 +93,9 @@ body
     left: 18px;
 }
 .question-tag{
-    margin-right: 5px;
+    white-space: normal;
+    margin: 5px 5px;
+    display: inline-block;
 }
 .question-rela {
     list-style: none;
