--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>发现</h2>
             <hr>
 
-            <div class="media" th:each="question : ${pagination.questionlist}">
+            <div class="media" th:each="question : ${pagination.dataList}">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object img-rounded"
