--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -91,7 +91,7 @@
                 <a href="/profile/questions" class="list-group-item " th:classappend="${section == 'questions'}? 'active' : ''">我的问题</a>
                 <a href="/profile/replies" class="list-group-item" th:classappend="${section == 'replies'}? 'active' : ''">
                     最新回复
-                    <span class="badge" th:text="${unreadCount}">14</span></a>
+                    <span class="badge" th:text="${session.unreadCount}">14</span></a>
                 <a href="#" class="list-group-item">邀请我的回复</a>
                 <a href="#" class="list-group-item">我的收藏</a>
                 <a href="#" class="list-group-item">最新动态</a>
