git aliyun have not finished yet

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -21,5 +21,7 @@
         <p th:text="${message}">还在旋转~~~~~</p>
         <p><a class="btn btn-primary btn-lg" href="/" role="button">跳转首页</a></p>
     </div>
+
+<div th:insert="~{head :: foot}"></div>
 </body>
 </html>
