--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -118,3 +118,9 @@ body
     list-style: none;
     padding-left: 5px;
 }
+.footer
+{
+    text-align: center;
+    color: #666;
+    height: 39px;
+}
