--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -13,9 +13,10 @@
             </div>
             <a class="navbar-brand" href="/">聚宝小镇</a>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <form class="navbar-form navbar-left">
+                <form class="navbar-form navbar-left" action="/" method="get">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="搜索话题">
+
+                        <input type="text" class="form-control" placeholder="搜搜内容" th:value="${session.search == null}?null:${session.search}" name="search" >
                     </div>
                     <button type="submit" class="btn btn-default">搜索</button>
                 </form>
@@ -47,6 +48,10 @@
     </nav>
 </div>
 
+<div class="footer" th:fragment="foot">
+    Copyright © 2020 曾念念
+    聚宝小镇   ·   服务器：阿里云  ·   网站程序：Spring Boot  ·    ICP 备案号 ZNN20164206199
+</div>
 </body>
 
 </html>
