commit to linux

--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -39,7 +39,7 @@
                         </ul>
                     </li>
                     <li th:if="not ${session.user !=null}">
-                        <a href="https://github.com/login/oauth/authorize?client_id=c04ddabe01d852b742d1&redirect_uri=http://localhost:8887/callback&scope=user&state=1">登录</a>
+                        <a href="https://github.com/login/oauth/authorize?client_id=c04ddabe01d852b742d1&redirect_uri=http://localhost:8887/callback&scope=user&state=1&forcelogin=true">登录</a>
                     </li>
 
                 </ul>
