--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,25 +46,25 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${pagination.showFirstPage}">
-                        <a th:href="@{/(page=1,search=${session.search})}" aria-label="Previous">
+                        <a th:href="@{/(page=1,search=${session.search},tag=${tag})}" aria-label="Previous">
                             <span aria-hidden="true">&lt;&lt;</span>
                         </a>
                     </li>
                     <li th:if="${pagination.showPrevious}">
-                        <a th:href="@{/(page=${pagination.page - 1},search=${session.search})}" aria-label="Previous">
+                        <a th:href="@{/(page=${pagination.page - 1},search=${session.search},tag=${tag})}" aria-label="Previous">
                             <span aria-hidden="true">&lt;</span>
                         </a>
                     </li>
                     <li th:each="page : ${pagination.pages}" th:class="${pagination.page == page}? 'active' : ''"><a
-                            th:href="@{/(page=${page},search=${session.search})}" th:text="${page}" ></a></li>
+                            th:href="@{/(page=${page},search=${session.search},tag=${tag})}" th:text="${page}" ></a></li>
 
                     <li th:if="${pagination.showNext}">
-                        <a th:href="@{/(page=${pagination.page + 1},search=${session.search})}" aria-label="Previous">
+                        <a th:href="@{/(page=${pagination.page + 1},search=${session.search},tag=${tag})}" aria-label="Previous">
                             <span aria-hidden="true">&gt</span>
                         </a>
                     </li>
                     <li th:if="${pagination.showEndPage}">
-                        <a th:href="@{/(page=${pagination.totalPage},search=${session.search})}" aria-label="Previous">
+                        <a th:href="@{/(page=${pagination.totalPage},search=${session.search},tag=${tag})}" aria-label="Previous">
                             <span aria-hidden="true">&gt;&gt;</span>
                         </a>
                     </li>
@@ -74,8 +74,15 @@
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12" >
             <h3>热门话题</h3>
             OUR STORY BEGGINGS....<br>
+            <!--相关问题-->
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>相关问题</h4>
+                <ul class="col-lg-12 col-md-12 col-sm-12 col-xs-12 question-rela" >
+                    <li th:each="tag : ${hottags}"><a th:href="@{/(page=1,search=${session.search},tag=${tag})}" th:text="${tag}"></a></li>
+                </ul>
+            </div>
         </div>
-
     </div>
 </div>
 <div th:insert="~{head :: foot}"></div>
