--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -2,6 +2,22 @@
 
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
+<head th:fragment="importhead">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" href="/css/community.css"/>
+    <script src="/js/jquery-3.4.1.min.js" type="application/javascript"></script>
+    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/moment.js" type="application/javascript"></script>
+    <script src="/js/community.js" type="application/javascript"></script>
+</head>
+<head th:fragment="importmarkdown">
+    <link rel="stylesheet" href="/css/editormd.preview.min.css">
+    <script src="/js/editormd.min.js" ></script>
+    <script src="/js/lib/marked.min.js"></script>
+    <script src="/js/lib/prettify.min.js"></script>
+</head>
 
 <div th:fragment="head">
     <nav class="navbar navbar-default">
@@ -20,6 +36,20 @@
                     </div>
                     <button type="submit" class="btn btn-default">搜索</button>
                 </form>
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="/videos" target="_blank"
+                        onclick="gtag('event','click',{'event_category':'LINK','event_label':'VIDEO','transport_type':'NAV'})">视频教程</a>
+                        <!--
+                        // gtag() 谷歌分析监测代码gTag，按钮每次点击按钮 向Google数据报告添加记录 事件名为click 记录值 为 str
+                         //正确用法如下:
+                           gtag('event','Btn Click',{//第二个参数为事件动作
+                           'event_category':'Click',//该字符串为事件类别
+                           'event_label':'被点击按钮',//事件标签
+                            'value':500,//事件价值
+                -->
+                    </li>
+                </ul>
                 <ul class="nav navbar-nav navbar-right">
 
                     <li th:if="${session.user !=null}">
@@ -48,7 +78,7 @@
     </nav>
 </div>
 
-<div class="footer" th:fragment="foot">
+<div th:fragment="foot" class="footer">
     Copyright © 2020 曾念念
     聚宝小镇   ·   服务器：阿里云  ·   网站程序：Spring Boot  ·    ICP 备案号 ZNN20164206199
 </div>
