--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -2,18 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title th:text="${question.title}"></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/bootstrap-theme.min.css"/>
-    <link rel="stylesheet" href="/css/community.css"/>
-    <link rel="stylesheet" href="/css/editormd.preview.min.css">
-    <script src="/js/jquery-3.4.1.min.js" type="application/javascript"></script>
-    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
-    <script src="/js/moment.js" type="application/javascript"></script>
-    <script src="/js/community.js" type="application/javascript"></script>
-    <script src="/js/editormd.min.js" ></script>
-    <script src="/js/lib/marked.min.js"></script>
-    <script src="/js/lib/prettify.min.js"></script>
+    <head th:insert="~{head ::importhead}"></head>
+    <head th:insert="~{head ::importmarkdown}"></head>
 
 </head>
 <body>
@@ -185,5 +175,6 @@
 
     </div>
 </div>
+<div th:insert="~{head :: foot}"></div>
 </body>
 </html>
