--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>My first Boot</title>
-    <head th:insert="~{head ::importhead}"></head>
+    <head th:insert="~{importhead ::importhead}"></head>
+
 </head>
 <script type="application/javascript">
     window.onload = function () {
