--- a/src/main/resources/templates/videos.html
+++ b/src/main/resources/templates/videos.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title> 视频教程 </title>
-    <head th:insert="~{head ::importhead}"></head>
-    <head th:insert="~{head ::importmarkdown}"></head>
+    <head th:insert="~{importhead ::importhead}"></head>
+    <head th:insert="~{importhead ::importmarkdown}"></head>
 
 </head>
 <body>
@@ -18,7 +18,7 @@
             <a href="/video/25582665"><img src="/images/com-struct.png" alt=""></a>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 video">
-            <a href="/video/av50200264"><img src="/images/ai.png" alt=""></a>
+            <a href="/video/75233634"><img src="/images/ai.png" alt=""></a>
         </div>
     </div>
 </div>
