--- a/src/main/resources/templates/video.html
+++ b/src/main/resources/templates/video.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <!--右侧 -->
-            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 note">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 note">
                 <h4>视频笔记</h4>
                 这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记
                 这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记
@@ -59,7 +59,7 @@
                 这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记
                 这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记
                 这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记
-
+                这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记这里是笔记笔记
             </div>
         </div>
         <!--视频留言-->
