--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title th:text="${question.title}"></title>
-    <head th:insert="~{head ::importhead}"></head>
-    <head th:insert="~{head ::importmarkdown}"></head>
+    <head th:insert="~{importhead ::importhead}"></head>
+    <head th:insert="~{importhead ::importmarkdown}"></head>
 
 </head>
 <body>
